--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>React and Webpack4</title>
+        <script src="https://www.gstatic.com/charts/loader.js"></script>
     </head>
     <body><div id="react-app-container"></div></body>
 </html>
